# triptych-detector-training

./: .gitignore  README.md  main.py  pyproject.toml
