[project]
name = "triptych-detector-training"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "pikamonvvs", email = "pikamonvvs@naver.com"},
]
dependencies = ["numpy>=2.0.2", "keras>=3.8.0", "tensorflow>=2.18.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
